Don't store MenuManager - consequently, handle the InventoryCloseEvent inside MenuManager instead of letting developers forget to unregister their menu (todo: test how this affects re-opening the menu) - consequently, MenuManager needs to be provided as an argument in the methods that previously used it - add ManagedMenu as a separate implementation AbstractMenu that solely stores a MenuManager, will most likely be deleted because it seems it can't be subclasses with other subclasses in any way to use their features - improve some methods' bodies - fix some typos and grammar errors - improve or simplify some Javadoc comments