@@ -1,9 +1,9 @@
 package com.cosimo.utilities.menu.menus;
 
-import com.google.common.base.Preconditions;
 import com.cosimo.utilities.menu.MenuManager;
 import com.cosimo.utilities.menu.slot.ISlotProperty;
 import com.cosimo.utilities.menu.slot.SlotProperty;
+import com.google.common.base.Preconditions;
 import org.bukkit.entity.HumanEntity;
 import org.bukkit.event.inventory.InventoryAction;
 import org.bukkit.event.inventory.InventoryClickEvent;
@@ -17,15 +17,15 @@ import org.bukkit.inventory.ItemStack;
 
 import javax.annotation.Nonnull;
 import javax.annotation.Nullable;
-import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collection;
+import java.util.List;
+import java.util.Objects;
 import java.util.Optional;
-import java.util.concurrent.atomic.AtomicInteger;
+import java.util.stream.StreamSupport;
 
 /**
- * Represents a collection of functional actions and features of an inventory that multiple viewers can see and interact
- * with, containing many different features that can be customised and extended by a developer.
+ * Represents a collection of algorithms and features upon a {@link Inventory} that multiple viewers can see and
+ * interact with, with the wide possibilities of adding more features.
  *
  * <p>A developer can subclass this class, override the methods or add them to customise the ways of processing inputs
  * for inventory menu events or modifying the inventories.
@@ -37,40 +37,30 @@ import java.util.concurrent.atomic.AtomicInteger;
 public abstract class AbstractMenu {
 
     /**
-     * Main, constant part of an {@link AbstractMenu} that identifies it.
+     * Backing {@link Inventory} that's actually wrapped by this class.
      */
     private final Inventory inventory;
 
     /**
-     * A {@link MenuManager} instance that is available for the control of this {@link AbstractMenu}.
-     */
-    private MenuManager menuManager;
-
-    /**
      * The default constructor for all subclasses.
      *
-     * @param inventory   Not null {@link Inventory} that will be wrapped and controlled by an {@link AbstractMenu}
-     * @param menuManager Not null {@link MenuManager} that will be used for (un)registering this {@link AbstractMenu}
-     *                    and passing events to it
-     * @throws IllegalArgumentException If the {@link Inventory} or {@link MenuManager} argument is null
+     * @param inventory Not null {@link Inventory} that will be wrapped and controlled by an {@link AbstractMenu}
+     * @throws IllegalArgumentException If the {@link Inventory} argument is null
      */
-    public AbstractMenu(@Nonnull Inventory inventory, @Nonnull MenuManager menuManager) {
+    public AbstractMenu(@Nonnull Inventory inventory) {
         Preconditions.checkArgument(inventory != null, "Inventory argument can't be null");
-        Preconditions.checkArgument(menuManager != null, "MenuManager argument can't be null");
-
         this.inventory = inventory;
-        this.menuManager = menuManager;
     }
 
     /**
-     * Acts as an event handler for the movement of an {@link org.bukkit.inventory.ItemStack} from source to
-     * destination inventory.
+     * Acts as an event handler for the movement of an {@link org.bukkit.inventory.ItemStack} from source to destination
+     * inventory.
      *
      * <p>This typically happens when listening to a container inventory; example of a situation is .</p>
      *
      * @param event         {@link InventoryMoveItemEvent} event
-     * @param isDestination Whether this {@link org.bukkit.inventory.Inventory} is equal to the {@link
-     *                      InventoryMoveItemEvent#getDestination()}
+     * @param isDestination Whether this {@link org.bukkit.inventory.Inventory} is equal to the
+     *                      {@link InventoryMoveItemEvent#getDestination()}
      */
     public void onItemMove(@Nonnull InventoryMoveItemEvent event, boolean isDestination) {
         event.setCancelled(true);
@@ -79,8 +69,8 @@ public abstract class AbstractMenu {
     /**
      * Handles any {@link InventoryClickEvent} related to this inventory.
      *
-     * <p>By default, the {@link InventoryAction} {@code COLLECT_TO_CURSOR} and {@code MOVE_TO_OTHER_INVENTORY} are
-     * cancelled and any menu action is cancelled from interaction, but interaction with one's personal inventory is
+     * <p>By default, the {@link InventoryAction#COLLECT_TO_CURSOR} and {@link InventoryAction#MOVE_TO_OTHER_INVENTORY}
+     * are cancelled and any menu action is cancelled from interaction, but interaction with one's personal inventory is
      * allowed.
      *
      * @param event    {@link InventoryClickEvent} event
@@ -99,8 +89,8 @@ public abstract class AbstractMenu {
     /**
      * Handles the {@link PluginDisableEvent} of the {@link MenuManager} this {@link AbstractMenu} is registered in.
      *
-     * <p>{@link AbstractMenu}s should always close themselves during this event because their reference is mostly lost -
-     * {@link org.bukkit.plugin.Plugin}s are disabled on restart, their reference is lost and a totally new object is
+     * <p>{@link AbstractMenu}s should always close themselves during this event because their reference is mostly lost
+     * - {@link org.bukkit.plugin.Plugin}s are disabled on restart, their reference is lost and a totally new object is
      * created on reload. The same happens with {@link MenuManager} as they are connected to their
      * {@link org.bukkit.plugin.Plugin}s.
      *
@@ -114,15 +104,12 @@ public abstract class AbstractMenu {
      * Handles the inventory close events of an inventory.
      *
      * <p>Can open new menus: for the given {@link InventoryCloseEvent} of a
-     * {@link HumanEntity}, perform that task on the next tick. For an example, to reopen this menu: {@code
-     * Bukkit.getScheduler().runTask(plugin, () -> open(event.getPlayer()))}.
+     * {@link HumanEntity}, perform that task on the next tick. For an example, to reopen this menu:
+     * {@code Bukkit.getScheduler().runTask(plugin, () -> open(event.getPlayer()))}.
      *
      * @param event {@link InventoryCloseEvent} event
      */
     public void onClose(@Nonnull InventoryCloseEvent event) {
-        if (this.getInventory().getViewers().size() < 2) {
-            this.getManager().unregisterMenu(this);
-        }
     }
 
     /**
@@ -135,11 +122,8 @@ public abstract class AbstractMenu {
     public void onDrag(@Nonnull InventoryDragEvent event) {
         int size = event.getView().getTopInventory().getSize();
 
-        for (int slot : event.getRawSlots()) {
-            if (slot < size) {
-                event.setCancelled(true);
-                break;
-            }
+        if (event.getRawSlots().stream().mapToInt(slot -> slot).anyMatch(slot -> slot < size)) {
+            event.setCancelled(true);
         }
     }
 
@@ -163,22 +147,23 @@ public abstract class AbstractMenu {
      * @throws NullPointerException     If a {@link HumanEntity} is null
      */
     @Nonnull
-    public AbstractMenu open(@Nonnull Iterable<? extends HumanEntity> viewers) {
-        Preconditions.checkState(this.menuManager.isRegistered(),
+    public AbstractMenu open(@Nonnull MenuManager menuManager, @Nonnull Iterable<? extends HumanEntity> viewers) {
+        Preconditions.checkState(menuManager.isRegistered(),
                 "MenuManager has no enabled plugin registered to handle inventory menu events");
         Preconditions.checkArgument(viewers != null,
                 "Collection<? extends HumanEntity> of viewers argument can't be null");
 
-        final AtomicInteger count = new AtomicInteger();
-        this.getManager().registerMenu(this);
-        viewers.forEach(viewer -> {
-            Preconditions.checkArgument(viewer != null, "HumanEntity in an Iterable of viewers argument can't be null");
-            viewer.openInventory(this.getInventory());
-            count.getAndIncrement();
-        });
+        menuManager.registerMenu(this);
 
-        if (count.get() == 0) {
-            this.getManager().unregisterMenu(this);
+        final long count = StreamSupport.stream(viewers.spliterator(), false)
+                .filter(Objects::nonNull)
+                .peek(viewer -> viewer.openInventory(this.getInventory()))
+                .count();
+
+        if (count == 0) {
+            // We've been bamboozled and need to undo the menu registration
+            menuManager.unregisterMenu(this);
+            throw new IllegalArgumentException("Zero or all null menu viewers provided to open the menu");
         }
 
         return this;
@@ -207,25 +192,6 @@ public abstract class AbstractMenu {
     }
 
     /**
-     * Unregisters this {@link AbstractMenu} from its previous {@link MenuManager}, sets and registers itself to the
-     * new, given {@link MenuManager}.
-     *
-     * @param menuManager Not null {@link MenuManager} that this {@link AbstractMenu} will switch over to
-     * @return Previous {@link MenuManager} of this {@link AbstractMenu}
-     * @throws IllegalArgumentException If the {@link MenuManager} argument is null
-     */
-    @Nonnull
-    public AbstractMenu setManager(@Nonnull MenuManager menuManager) {
-        Preconditions.checkArgument(menuManager != null, "MenuManager argument can't be null");
-
-        this.menuManager.unregisterMenu(this);
-        this.menuManager = menuManager;
-        menuManager.registerMenu(this);
-
-        return this;
-    }
-
-    /**
      * Opens this {@link AbstractMenu} for the given viewers, fail-fast.
      *
      * @param viewers Array of {@link HumanEntity} of which each will see this {@link AbstractMenu} {@link Inventory}
@@ -236,8 +202,8 @@ public abstract class AbstractMenu {
      * @throws NullPointerException     If a {@link HumanEntity} is null
      */
     @Nonnull
-    public AbstractMenu open(@Nonnull HumanEntity... viewers) {
-        return this.open(Arrays.asList(viewers));
+    public AbstractMenu open(@Nonnull MenuManager menuManager, @Nonnull HumanEntity... viewers) {
+        return this.open(menuManager, List.of(viewers));
     }
 
     /**
@@ -251,7 +217,7 @@ public abstract class AbstractMenu {
      */
     @Nonnull
     public AbstractMenu close() {
-        new ArrayList<>(this.getInventory().getViewers()).forEach(HumanEntity::closeInventory);
+        List.copyOf(this.getInventory().getViewers()).forEach(HumanEntity::closeInventory);
         return this;
     }
 
@@ -287,16 +253,5 @@ public abstract class AbstractMenu {
     @Nonnull
     public final Inventory getInventory() {
         return this.inventory;
-    }
-
-    /**
-     * Returns the {@link MenuManager} that is used by this {@link AbstractMenu} to (un)register itself, listen to
-     * events and access other {@link AbstractMenu}s.
-     *
-     * @return The {@link MenuManager} this inventory is or will be registered in
-     */
-    @Nonnull
-    public MenuManager getManager() {
-        return this.menuManager;
     }
 }
